# finnerio-music-scrapping

./: .env.example  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  scrapy.cfg
src/: db.py  settings.py
src/items/: __init__.py  genres.py
src/pipelines/: database.py
src/spiders/: __init__.py  albums.py  artists.py  genres.py  songs.py  subgenres.py
src/tests/: test_genres.py  test_utils.py  utils.py
src/tests/fixtures/: genres.json
src/utils/: __init__.py  urls.py
